--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,13 @@ header nav li:last-of-type a{
     border-radius: 50%;
     margin-right: 6px;
 }
+
+footer .list{
+    max-width: 1200px;
+    margin: auto;
+    padding-left: 34px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
