--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,16 @@ footer .list{
     justify-content: space-between;
     align-items: center;
 }
+
+.information_block{
+    background-image: url("../images/bg_2.jpg");
+    background-size: cover;
+    min-height: 600px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.information_block article{
+    max-width: 298px;
+    margin-right: 62px;
+}
