--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ header nav li:last-of-type a{
     align-items: flex-end;
     padding-bottom: 71px;
     box-sizing: border-box;
+    position: relative;
 }
 .main_banner .container{
     max-width: 580px;
@@ -86,6 +87,7 @@ header nav li:last-of-type a{
     /* identical to box height, or 110% */
     color: #FFFFFF;
     margin-bottom: 18px;
+    margin-top: 0px;
 }
 .main_banner p{
     font-family: 'poppinsregular';
@@ -93,6 +95,133 @@ header nav li:last-of-type a{
     line-height: 20px;
     /* or 143% */
     color: #C0C0C0;
+}
+
+.widget_right_bottom{
+position: absolute;
+right: 40px;
+bottom: 46px;
+display: flex;
+}
+.widget_right_bottom li{
+    font-family: 'poppinsregular';
+    font-size: 12px;
+    line-height: 12px;
+    /* identical to box height, or 100% */
+    color: #FFFFFF;
+    margin-left: 16px;
+}
+.widget_right_bottom li:before{
+    content: "";
+    display: inline-block;
+    background-image: url("../images/icon_1.svg");
+    width: 16px;
+    height: 16px;
+    margin-right: 6px;
+    position: relative;
+    bottom: -7px;
+}
+.widget_right_bottom li:nth-child(2)::before{
+    background-image: url("../images/icon_2.svg");
+}
+.widget_right_bottom li:nth-child(3)::before{
+    background-image: url("../images/icon_3.svg");
+    width: 32px;
+    margin-right: 5px;
+}
+.widget_right_bottom li:last-of-type:before{
+    background-image: url("../images/icon_4.svg");
+    width: 10px;
+    margin-right: 7px;
+}
+
+.what_we_do{
+    background-color: #000000;
+    padding: 113px 0 84px;
+}
+.what_we_do .container{
+    max-width: 1168px;
+    margin: auto;
+}
+.what_we_do h2{
+    font-family: 'poppinsregular';
+    font-size: 40px;
+    line-height: 42px;
+    /* identical to box height, or 105% */
+    text-align: center;
+    color: #FFFFFF;
+    padding-bottom: 15px;
+}
+.what_we_do h4{
+    font-family: 'poppinsregular';
+    font-size: 23px;
+    line-height: 30px;
+    /* identical to box height, or 130% */
+    text-align: center;
+    color: #C0C0C0;
+    padding-bottom: 42px;
+}
+
+.what_we_do .d-flex{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.what_we_do article{
+    max-width: 576px;
+    margin-bottom: 16px;
+    position: relative;
+}
+.what_we_do article img{
+    display: block;
+    width: 100%;
+}
+.what_we_do article .description{
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    right: 30px;
+}
+.description h5{
+    font-family: 'poppinsregular';
+    font-size: 14px;
+    line-height: 20px;
+    /* identical to box height, or 143% */
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+.description p{
+    font-family: 'poppinsregular';
+    font-size: 14px;
+    line-height: 20px;
+    /* or 143% */
+    color: #C0C0C0;
+    margin-bottom: 17px;
+}
+.read_more{
+    background: #FFFFFF;
+    border-radius: 14px;
+    padding: 5px 4px;
+    font-family: 'poppinsregular';
+    font-size: 15px;
+    line-height: 20px;
+    /* identical to box height, or 133% */
+    letter-spacing: 0.4px;
+    color: #000000;
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+}
+.read_more:before{
+    content: "";
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background-color: black;
+    border-radius: 50%;
+    margin-right: 6px;
 }
 
 .secondary_banner{
@@ -149,15 +278,7 @@ header nav li:last-of-type a{
     margin-right: 6px;
 }
 
-footer .list{
-    max-width: 1200px;
-    margin: auto;
-    padding-left: 34px;
-    padding-right: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
 
 .information_block{
     background-image: url("../images/bg_2.jpg");
@@ -166,6 +287,7 @@ footer .list{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
 }
 .information_block article{
     max-width: 298px;
@@ -195,6 +317,7 @@ footer .list{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
 }
 .information_block1 article {
     max-width: 298px;
@@ -224,6 +347,7 @@ footer .list{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
 }
 .information_block2 article {
     max-width: 298px;
@@ -236,7 +360,6 @@ footer .list{
     /* identical to box height, or 143% */
     letter-spacing: 2px;
     text-transform: uppercase;
-
     color: #FFFFFF;
 }
 .information_block2 p{
