--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header nav li a{
     font-family: 'poppinsregular';
     font-size: 15px;
     line-height: 20px;
-   color: #FFFFFF;
+    color: #FFFFFF;
     text-decoration: none;
 }
 header nav li:first-of-type a{
@@ -224,60 +224,6 @@ display: flex;
     margin-right: 6px;
 }
 
-.secondary_banner{
-    background: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    box-sizing: border-box;
-}
-.secondary_banner .container{
-    max-width: 571px;
-    text-align: center;
-}
-.secondary_banner h2{
-    font-family: 'poppinsregular';
-    font-size: 40px;
-    line-height: 42px;
-    /* or 105% */
-    color: #FFFFFF;
-    margin-bottom: 15px;
-}
-.secondary_banner h3{
-    font-family: 'poppinsregular';
-    font-size: 24px;
-    line-height: 30px;
-    /* identical to box height, or 125% */
-    color: #C0C0C0;
-    margin-bottom: 22px;
-}
-.get_in_touch{
-    background-color: white;
-    padding: 5px 4px;
-    border-radius: 14px;
-    font-family: 'poppinsregular';
-    font-size: 16px;
-    line-height: 20px;
-    /* identical to box height, or 125% */
-    text-align: center;
-    letter-spacing: 0.4px;
-    color: #000000;
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none;
-}
-.get_in_touch:before{
-    content: "";
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    background-color: black;
-    border-radius: 50%;
-    margin-right: 6px;
-}
-
 
 
 .information_block{
@@ -340,6 +286,38 @@ display: flex;
     color: #C0C0C0;
 }
 
+.past_clients{
+    background: #000000;
+    padding: 120px 0px 100px;
+}
+.past_clients .container{
+    max-width: 1168px;
+    margin: auto;
+}
+.past_clients .d-flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.past_clients h2{
+    font-family: 'poppinsregular';
+    font-size: 40px;
+    line-height: 42px;
+    /* identical to box height, or 105% */
+    text-align: center;
+    color: #FFFFFF;
+    padding-bottom: 15px;
+}
+.past_clients h4{
+    font-family: 'poppinsregular';
+    font-size: 24px;
+    line-height: 30px;
+    /* identical to box height, or 125% */
+    text-align: center;
+    color: #C0C0C0;
+    padding-bottom: 42px;
+}
+
 .information_block2{
     background-image: url("../images/bg_4.jpg");
     background-size: cover;
@@ -368,4 +346,58 @@ display: flex;
     line-height: 20px;
     /* or 143% */
     color: #C0C0C0;
+}
+
+.secondary_banner{
+    background: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    box-sizing: border-box;
+}
+.secondary_banner .container{
+    max-width: 571px;
+    text-align: center;
+}
+.secondary_banner h2{
+    font-family: 'poppinsregular';
+    font-size: 40px;
+    line-height: 42px;
+    /* or 105% */
+    color: #FFFFFF;
+    margin-bottom: 15px;
+}
+.secondary_banner h3{
+    font-family: 'poppinsregular';
+    font-size: 24px;
+    line-height: 30px;
+    /* identical to box height, or 125% */
+    color: #C0C0C0;
+    margin-bottom: 22px;
+}
+.get_in_touch{
+    background-color: white;
+    padding: 5px 4px;
+    border-radius: 14px;
+    font-family: 'poppinsregular';
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height, or 125% */
+    text-align: center;
+    letter-spacing: 0.4px;
+    color: #000000;
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+}
+.get_in_touch:before{
+    content: "";
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background-color: black;
+    border-radius: 50%;
+    margin-right: 6px;
 }
