--- a/css/style.css
+++ b/css/style.css
@@ -428,3 +428,144 @@ display: flex;
     border-radius: 50%;
     margin-right: 6px;
 }
+
+footer{
+    padding: 100px 0;
+    background-color: black;
+
+}
+footer .container{
+    max-width: 1168px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-bottom: 36px;
+}
+footer .container:nth-of-type(2){
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
+    padding: 36px 0;
+    margin-bottom: 56px;
+}
+footer .container:nth-of-type(2) .ft_right{
+    width: 100%;
+    max-width: 458px;
+}
+footer .logo{
+    margin-bottom: 20px;
+}
+footer .ft_left p{
+    font-family: 'poppinsregular';
+    font-size: 13px;
+    line-height: 20px;
+    color: #C0C0C0;
+}
+footer .ft_right{
+    display: flex;
+}
+footer .ft_right ul{
+    list-style: none;
+}
+footer .ft_right ul:first-of-type{
+    margin-right: 55px;
+}
+footer .ft_right li{
+    margin-bottom: 10px;
+    font-family: 'poppinsregular';
+    font-size: 14px;
+    line-height: 20px;
+    /* identical to box height, or 143% */
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #C0C0C0;
+}
+footer .ft_right li a{
+    text-decoration: none;
+    text-transform: capitalize;
+    font-family: 'poppinsregular';
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+footer .ft_left h3{
+    font-family: 'poppinsregular';
+    font-size: 14px;
+    line-height: 20px;
+    /* identical to box height, or 143% */
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+footer .ft_left h4{
+    font-family: 'poppinsregular';
+    font-size: 13px;
+    line-height: 20px;
+    color: #C0C0C0;
+}
+footer .ft_right form{
+    background: #F9FAFB;
+    border: 1px solid #E5E7EB;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    padding: 11px 6px;
+    width: 100%;
+}
+footer .ft_right form input{
+    width: 75%;
+    display: inline-block;
+    border: none;
+    background-color: transparent;
+}
+footer .ft_right form button{
+    border: none;
+    background: #000000;
+    border-radius: 11px;
+    height: 30px;
+    width: 63px;
+}
+.ft_icon{
+    margin-left: 20px;
+}
+
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover, .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active, .ui-widget-content{
+    background-color: transparent;
+    border: none;
+}
+.ui-accordion .ui-accordion-content{
+    padding: 0;
+}
+.ui-accordion .ui-accordion-header{
+    max-width: 1168px;
+    margin: auto;
+    text-align: center;
+}
+
+.ui-icon{
+    display: none;
+}
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited{
+    color: black;
+    display: none;
+}
+.ui-state-active .arrow-right{
+    display: none;
+}
+.arrow-right,
+.arrow-left{
+    display: block;
+    margin: 30px;
+    width: 25px;
+    height: 25px;
+    border-top: 2px solid #869791;
+    border-left: 2px solid #869791;
+    box-shadow: inset 0 4px 0 rgba(255, 255, 255, 4);
+}
+.arrow-right{
+    transform: rotate(135deg);
+}
+.arrow-left{
+    transform: rotate(-45deg);
+}
