--- a/css/style_preproc.scss
+++ b/css/style_preproc.scss
@@ -707,15 +707,14 @@ footer{
     background-color: transparent;
     border: none;
   }
-  .ui-accordion .ui-accordion-content{
-    padding: 0;
-  }
+  //.ui-accordion .ui-accordion-content{
+  //  padding: 0;
+  //}
   .ui-accordion .ui-accordion-header{
     max-width: 1168px;
     margin: auto;
     text-align: center;
   }
-
   .ui-icon{
     display: none;
   }
@@ -734,7 +733,7 @@ footer{
     height: 25px;
     border-top: 2px solid #869791;
     border-left: 2px solid #869791;
-    box-shadow: inset 0 4px 0 rgba(255, 255, 255, 4);
+    //box-shadow: inset 0 4px 0 rgba(255, 255, 255, 4);
   }
   .arrow-right{
     transform: rotate(135deg);
@@ -742,13 +741,13 @@ footer{
   .arrow-left{
     transform: rotate(-45deg);
   }
-  @media screen and (max-width: 768px){
-    .ui-accordion .ui-accordion-content{
+  @media screen and (max-width: 768px) {
+     .ui-accordion .ui-accordion-content {
       margin-left: 20px;
-      margin-right: 20px;
-    }
+      margin-right: 20px; }
   }
-}
+  }
+
 
 
 
